website.css
@import url("https://rsms.me/inter/inter.css");

:root {
  --fontSize: 1rem;
  --lineHeight: calc(var(--fontSize) * 1.5);
  --baseline: calc(var(--lineHeight) / 2);

  --sansFont: "Inter";
  --h1-size: 2.8rem;
  --h2-size: 2.2rem;
  --h3-size: 1.4rem;
  --h4-size: 1.1rem;

  --fg-color: hsl(0, 50%, 50%);
  --fg-accent-color: hsl(210, 90%, 50%);
  --fg-accent-color--light: hsla(210, 90%, 50%, 25%);
  --fg-accent-color--lighter: hsla(210, 90%, 50%, 8%);

  --spacing-xs: 0.5rem; /* 8px  */
  --spacing-sm: 0.75rem; /* 12px */
  --spacing: 1rem; /* 16px */
  --spacing-lg: 1.5rem; /* 24px */
  --spacing-xl: 2rem; /* 72px */
}

* {
  box-sizing: border-box;
}

html {
  font-family: var(--sansFont), -system-ui, system-ui, sans-serif;
  font-size: var(--fontSize);
  line-height: var(--lineHeight);
  background: var(--background-color);
  color: var(--foreground-color);
  letter-spacing: -0.01em;
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-variant-ligatures: contextual common-ligatures;
  font-feature-settings: "kern" 1, "liga" 1, "calt" 1, "cv10" 1; /* G */
}
/* first element has no top margin */
:first-child {
  margin-top: unset;
}
:last-child {
  margin-bottom: unset;
}

[hidden] {
  display: none !important;
}
[disabled] {
  pointer-events: none;
  opacity: 0.3;
}
.horizontal {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.vertical {
  display: flex;
  flex-direction: column;
}
.center {
  justify-content: center;
  align-items: center;
}
.flex {
  flex: 1;
}


h1 {
  font-size: var(--h1-size);
  line-height: calc(var(--lineHeight) * 2);
  letter-spacing: -0.05em;
}
h2 {
  font-size: var(--h2-size);
  line-height: calc(var(--lineHeight) * 2);
  letter-spacing: -0.03em;
}
h3 {
  font-size: var(--h3-size);
  line-height: calc(var(--lineHeight) * 2);
  letter-spacing: -0.02em;
}
h2 {
  font-size: var(--h4-size);
  line-height: calc(var(--lineHeight) * 2);
  letter-spacing: -0.012em;
}
h1,
h2,
h3,
h4 {
  padding-top: calc(var(--baseline) * 0.75);
  padding-bottom: calc(var(--baseline) * 0.25);
  margin-top: 0;
  margin-bottom: var(--baseline);
}
* + h1, h2, h3, h4 {
/*   background-color: pink; */
  /*   margin-top: var(--lineHeight); */
  /*   padding-top: calc(var(--lineHeight) * 0.5); */
  /*   padding-bottom: calc(var(--lineHeight) * 0.5); */
  margin-bottom: 0;
  padding-bottom: 0;
}
* + p {
  margin-top: calc(var(--baseline) / 2);
}
a, a:visited {
  font-weight: 500;
  color: var(--fg-accent-color);
  text-decoration: none;
  border-bottom: 2px solid var(--fg-accent-color--light);
}
a:hover {
  color: $accent;
  background-color: var(--fg-accent-color--lighter);
  border-bottom-color: var(--fg-accent-color);
  border-bottom-style: solid;
}

a:active {
  border-bottom-style: dashed;
}

a:focus {
  outline: inherit;
}

a:visited {
  color: var(--fg-accent-color);
}

strike {
  opacity: 0.5;
}
/* p a[target="_blank"]::after {
  display: inline-block;
  content: "\2197";
  font-weight: 400;
  padding-left: 0.125em;
}
p a[href^="mailto:"]::before {
  content: "\270E";
  content: "\2192";
  display: inline-block;
  font-weight: 400;
  padding-right: 0.125em;
} */

.mt-xl {
  margin-top: var(--spacing-xl);
}

.container {
  max-width: 56rem;
  padding: 0 var(--spacing);
  margin-bottom: var(--spacing-lg);
  margin-left: auto;
  margin-right: auto;
}
@media only screen and (min-width: 360px) {
  .container {
    padding: 0 var(--spacing-lg);
    /*     margin-bottom: var(--spacing-xl); */
  }
}

.container--content p {
  font-size: 1.125rem;
  line-height: 1.5;
}

.container--header .lead {
  font-size: 1.5rem;
}
.container--content .lead {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  opacity: 0.96;
/*   margin-top: 0; */
  margin-top: calc(var(--baseline) * 1.5);
  margin-bottom: calc(var(--baseline) * 1.5);
}

.headline {
  margin-bottom: 0;
  padding-bottom: 0;
}
.headline + p {
  margin-top: -0.25em;
}

/* .the-important-stuff {
  position: relative;
}
.the-important-stuff::before {
  content: ' ';
  display: block;
  width: 4px;
  height: 100%;
  position: absolute;
  top: 0; left: -20px;
  background-color: #eee;
  background-color: var(--fg-accent-color--light)
} */

.intro {}
.intro .g {
/*   animation: 1s 1s ease-out FXfadeInBottom; */
  animation-fill-mode: both;
  transform-origin: 50%;
/*   opacity: 0; */
/*   transform: inherit; */
}
.intro .g:nth-child(odd) {
/*   animation */
}
.intro .g2 {
  animation-delay: 1.25s;
}
.intro .g3 {
    animation-delay: 1.5s;
}
.intro .g4 {
    animation-delay: 1.75s;
}

.container:not(:first-child) {
  animation: 0.5s ease-out FXfadeInTop2;
  animation-fill-mode: both;
/*   transform-origin: 50%; */
  opacity: 0;
}
.container:nth-child(2) {
  animation-delay: 0.5s;
}
.container:nth-child(3) {
  animation-delay: 1s;
}
.container:nth-child(4) {
  animation-delay: 1.25s;
}

.container:nth-child(5) {
  animation-delay: 1.5s;
}

.container:nth-child(6) {
  animation-delay: 1.25s;
}

.container:nth-child(7) {
  animation-delay: 1.5s;
}

.container:nth-child(8) {
  animation-delay: 1.75s;
}

.container:nth-child(9) {
  animation-delay: 2s;
}

@keyframes FXfadeInTop2 {
  0% {
    opacity: 0;
    transform: translateY(0.5rem);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes FXfadeInBottom {
  0% {
    opacity: 0;
    top: translateY(0.5rem);
  }
  100% {
    opacity: 1;
    top: translateY(0);
  }
}

@keyframes FXfadeInTop {
  0% {
    opacity: 0;
    transform: translate3d(0, 88px, 0);
  }
  52% {
    opacity: 0;
    transform: translate3d(0, -16px, 0) rotateZ(-30deg) scaleY(1.125);
  }
  75% {
    transform: translate3d(0, 8px, 0) rotateZ(15deg) scaleY(1);
  }
  100% {
    opacity: 1;
    transform: translate3d(0, 0, 0);

  }

